--- a/src/components/Input/Input.module.css
+++ b/src/components/Input/Input.module.css
@@ -5,8 +5,14 @@
     border: none;
     background-color: transparent;
     color: white;
-    border-bottom: 1px solid rgba(245, 245, 245, 0.37);
+    border-bottom: 2px solid rgba(245, 245, 245, 0.37);
     outline: none;
     font-size: 22px;
     padding: 4px;
+}
+
+@media (max-width: 500px) {
+    .input{
+        width: 90%;
+    }
 }
