--- a/src/components/CorrectAnswer/CorrectAnswer.module.css
+++ b/src/components/CorrectAnswer/CorrectAnswer.module.css
@@ -1,9 +1,6 @@
 .correct{
-    position: fixed;
     color: lightcoral;
     text-align: center;
-    bottom: 12px;
-    left: 50%;
-    transform: translate(-50%,-50%);
     margin: 0 auto;
+    height: 40px;
 }
