--- a/src/components/UI/Container/Container.module.css
+++ b/src/components/UI/Container/Container.module.css
@@ -1,5 +1,5 @@
 .container {
-  background-image: radial-gradient(rgb(2, 2, 136), black);
+  background-image: radial-gradient(rgb(52, 52, 139), rgb(17, 17, 17));
   min-height: 100vh;
   width: 100%;
   margin: 0;
@@ -13,4 +13,11 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+}
+
+@media (max-width: 500px) {
+  .content{
+    justify-content: space-evenly;
+    min-height: 100vh;
+  }
 }
